--- a/index.html
+++ b/index.html
@@ -5,21 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>AppLove</title>
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
     <header>
-      <div>
+      <div class="list text-uppercase">
         <a>Services</a>
         <a>Work</a>
         <a>The team</a>
+        <figure>
+          <img class="logo"src="assets/images/logo.png" alt="logo">
+        </figure>
       </div>
     </header>
-    <section>
+    <section class="container">
       <div>
-        <h2>you just found an untilmate</h2>
-        <h1>We are applove from heart</h1>
-        <p>handcrafted - modern design - pixel perfect - passioned design</p>
-        <a>View services</a>
+      </figure>
+        <h2 class="text-uppercase" >you just found an untilmate</h2>
+        <h1 class="text-uppercase">We are applove from heart</h1>
+        <p class="text-uppercase">handcrafted - modern design - pixel perfect - passioned design</p>
+        <a><button id="button" class="text-uppercase" type="button" name="button">View services</button></a>
       </div>
     </section>
     <section>
