--- a/index.html
+++ b/index.html
@@ -1,70 +1,185 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>AppLove</title>
-    <link rel="stylesheet" href="css/main.css">
-  </head>
-  <body>
-    <header>
-      <div class="list text-uppercase">
-        <a>Services</a>
-        <a>Work</a>
-        <a>The team</a>
-        <figure>
-          <img class="logo"src="assets/images/logo.png" alt="logo">
-        </figure>
-      </div>
-    </header>
-    <section class="container">
-      <div>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>AppLove</title>
+  <!--linea 9 : link para extraer tipografía -->
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+  <link rel="stylesheet" href="css/main.css">
+</head>
+
+<body>
+  <!--HEADER (estructura principal) : div(1) -->
+  <header>
+
+    <div class="text-uppercase">
+      <a>Services</a>
+      <a>Work</a>
+      <a>The team</a>
+
+      <figure>
+        <img class="logo" src="assets/images/logo.png" alt="logo AppLove">
       </figure>
-        <h2 class="text-uppercase" >you just found an untilmate</h2>
-        <h1 class="text-uppercase">We are applove from heart</h1>
-        <p class="text-uppercase">handcrafted - modern design - pixel perfect - passioned design</p>
-        <a><button id="button" class="text-uppercase" type="button" name="button">View services</button></a>
-      </div>
-    </section>
-    <section>
-      <div>
-        <h2>Services</h2>
-        <h4>
+    </div>
+
+  </header>
+  <!--SECTION /CONTAINER (estructura principal):div(1) -->
+  <section class="container">
+
+    <div>
+
+      </figure>
+      <h2 class="text-uppercase">you just found an untilmate</h2>
+
+      <h1 class="text-uppercase">We are applove from heart</h1>
+
+      <p class="text-uppercase">handcrafted - modern design - pixel perfect - passioned design</p>
+
+      <a><button id="button" class="text-uppercase" type="button" name="button">View services</button></a>
+
+    </div>
+
+  </section>
+  <!--SECTION /SERVICES (estructura principal):h2(1);h4(1);div(1) -->
+  <section class="services">
+    <h2 class="text-uppercase">Services</h2>
+
+    <h4>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididuntut,<br>
           magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
         </h4>
-        <div>
-          <h5>user interface design</h5>
+
+    <div class="services-images">
+
+      <div class="service-item">
+
+        <figure>
+          <img src="assets/images/services-1.png" alt="servicio 1">
+        </figure>
+        <div class="description">
+          <h5 class="text-uppercase">user interface design</h5>
           <h6>Wireframing</h6>
           <h6>Prototyping</h6>
           <h6>Usability testing</h6>
         </div>
-        <div>
-          <h5>concept and ideas</h5>
+
+      </div>
+
+      <div class="service-item">
+        <figure>
+          <img src="assets/images/services-2.png" alt="servicio 2">
+        </figure>
+        <div class="description">
+          <h5 class="text-uppercase">concept and ideas</h5>
           <h6>Conceptualization</h6>
           <h6>Digital Branding</h6>
           <h6>Product Strategy</h6>
         </div>
-        <div>
-          <h5>desing and branding</h5>
+
+      </div>
+
+      <div class="service-item">
+        <figure>
+          <img src="assets/images/services-3.png" alt="servicio 3">
+        </figure>
+
+        <div class="description">
+          <h5 class="text-uppercase">desing and branding</h5>
           <h6>Interaction Design</h6>
           <h6>Graphic Design</h6>
           <h6>Identity Design</h6>
         </div>
+
       </div>
-    </section>
-    <section>
-      <div>
-        <h2>work</h2>
-        <h4>
+
+    </div>
+
+  </section>
+  <!--SECTION /WORK (estructura principal):div(1) -->
+  <section class="work">
+
+    <div class="work-description">
+
+      <h2 class="text-uppercase">work</h2>
+
+      <h4>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididuntut,<br>
           magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
         </h4>
+
+      <figure class="work-image">
+        <img src="assets/images/hero.png" alt="laptop de trabajo">
+      </figure>
+
+      <div class="galery">
+
+        <ul>
+
+          <li>
+            <img src="assets/images/work-1.jpg" alt="hoja tayman">
+            <p class="text-uppercase">nombre del proyecto</p>
+          </li>
+          <li>
+            <img src="assets/images/work-2.jpg" alt="botella dispensadora de gel">
+            <p class="text-uppercase">nombre del proyecto</p>
+          </li>
+          <li>
+            <img src="assets/images/work-3.jpg" alt="libro " The brass coq "">
+            <p class="text-uppercase">nombre del proyecto</p>
+          </li>
+          <li>
+            <img src="assets/images/work-4.jpg" alt="disco de vinilo">
+            <p class="text-uppercase">nombre del proyecto</p>
+          </li>
+          <li>
+            <img src="assets/images/work-5.jpg" alt="bolsa de especias">
+            <p class="text-uppercase">nombre del proyecto</p>
+          </li>
+          <li>
+            <img src="assets/images/work-6.jpg" alt="caja roja">
+            <p class="text-uppercase">nombre del proyecto</p>
+          </li>
+          <li>
+            <img src="assets/images/work-7.jpg" alt="pantalla de computadora">
+            <p class="text-uppercase">nombre del proyecto</p>
+          </li>
+          <li>
+            <img src="assets/images/work-8.jpg" alt="revista weareink">
+            <p class="text-uppercase">nombre del proyecto</p>
+          </li>
+          <li>
+            <img src="assets/images/work-9.jpg" alt="folleto">
+            <p class="text-uppercase">nombre del proyecto</p>
+          </li>
+          <li>
+            <img src="assets/images/work-10.jpg" alt="pantalla de computadora">
+            <p class="text-uppercase">nombre del proyecto</p>
+          </li>
+          <li>
+            <img src="assets/images/work-11.jpg" alt="pantalla de computadora">
+            <p class="text-uppercase">nombre del proyecto</p>
+          </li>
+          <li>
+            <img src="assets/images/work-12.jpg" alt="revista platinum">
+            <p class="text-uppercase">nombre del proyecto</p>
+
+        </ul>
+
       </div>
-    </section>
-    <footer>
-      <p>&#169; Copyright</p>
-    </footer>
-  </body>
+
+    </div>
+
+  </section>
+  <!--FOOTER/FOOTER (estructura principal):P(1) -->
+  <footer class="footer">
+
+    <p>&#169; Copyright</p>
+
+  </footer>
+
+</body>
+
 </html>
